--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-	"workbench.colorTheme": "Julia (Monokai Classic)"
+	"workbench.colorTheme": "Julia (Monokai Classic)",
+	"spellright.ignoreRegExps": [
+		"/\\d+/g",
+	]
 }
