--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
 	"workbench.colorTheme": "Julia (Monokai Classic)",
 	"spellright.ignoreRegExps": [
 		"/\\d+/g",
-	]
+	],
+	"elixirLS.useCurrentRootFolderAsProjectDir": true,
+	"elixirLS.dialyzerEnabled": true,
+	"elixirLS.autoBuild": true
 }
